--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "private": true,
   "sideEffects": false,
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
+  },
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "@remix-run/node": "^1.6.8",
     "@remix-run/react": "^1.6.8",
     "@remix-run/serve": "^1.6.8",
@@ -19,6 +23,8 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.20.0",
+    "prisma": "^4.2.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "engines": {
