--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "seed": "ts-node --transpile-only prisma/seed.ts"
+    "purge_db": "rm prisma/dev.db && prisma db push && prisma db seed"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
@@ -16,7 +16,8 @@
     "@remix-run/react": "^1.6.8",
     "@remix-run/serve": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-movable": "^3.0.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.8",
