--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "purge_db": "rm prisma/dev.db && prisma db push && prisma db seed"
+    "purge_db": "rm prisma/dev.db && prisma db push && prisma db seed",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
@@ -20,11 +21,17 @@
     "react-movable": "^3.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-typescript": "^7.18.6",
     "@remix-run/dev": "^1.6.8",
     "@remix-run/eslint-config": "^1.6.8",
+    "@types/jest": "^29.0.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "babel-jest": "^29.0.2",
     "eslint": "^8.20.0",
+    "jest": "^29.0.2",
     "prisma": "^4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
