--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
     "seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "run-s \"build:*\"",
+    "build:css": "npm run generate:css -- --minify",
+    "build:remix": "remix build",
+    "dev": "run-p \"dev:*\"",
+    "dev:css": "npm run generate:css -- --watch",
+    "dev:remix": "remix dev",
+    "generate:css": "npx tailwindcss -o ./app/tailwind.css",
     "start": "remix-serve build",
     "purge_db": "rm prisma/dev.db && prisma db push && prisma db seed",
     "test": "jest"
@@ -16,6 +21,7 @@
     "@remix-run/node": "^1.6.8",
     "@remix-run/react": "^1.6.8",
     "@remix-run/serve": "^1.6.8",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-movable": "^3.0.4"
@@ -32,7 +38,9 @@
     "babel-jest": "^29.0.2",
     "eslint": "^8.20.0",
     "jest": "^29.0.2",
+    "npm-run-all": "^4.1.5",
     "prisma": "^4.3.1",
+    "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
