--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@remix-run/node": "^1.6.8",
     "@remix-run/react": "^1.6.8",
     "@remix-run/serve": "^1.6.8",
+    "@xstate/react": "^3.0.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-movable": "^3.0.4"
+    "react-movable": "^3.0.4",
+    "xstate": "^4.33.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
