--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "generate:css": "npx tailwindcss -o ./app/tailwind.css",
     "start": "remix-serve build",
     "db:setup": "prisma db push && prisma db seed",
-    "db:reset": "rm prisma/dev.db && npm run db:setup",
+    "db:reset": "rm -f prisma/dev.db && npm run db:setup",
     "test": "jest"
   },
   "dependencies": {
