--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix dev",
     "generate:css": "npx tailwindcss -o ./app/tailwind.css",
-    "start": "remix-serve build",
+    "start": "npm run db:setup && remix-serve build",
     "db:setup": "prisma db push && prisma db seed",
-    "db:reset": "rm -f prisma/dev.db && npm run db:setup",
     "test": "jest"
   },
   "dependencies": {
