--- a/package.json
+++ b/package.json
@@ -1,52 +1,46 @@
 {
+  "name": "quizzo",
   "private": true,
   "sideEffects": false,
+  "type": "module",
   "prisma": {
-    "seed": "ts-node --transpile-only prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "scripts": {
-    "build": "run-s \"build:*\"",
-    "build:css": "npm run generate:css -- --minify",
-    "build:remix": "remix build",
-    "dev": "run-p \"dev:*\"",
-    "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "remix dev",
-    "generate:css": "npx tailwindcss -o ./app/tailwind.css",
-    "start": "npm run db:setup && remix-serve build",
+    "build": "remix build",
     "db:setup": "prisma db push && prisma db seed",
-    "test": "jest"
+    "dev": "remix dev --manual",
+    "start": "remix-serve ./build/index.js",
+    "test": "vitest",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@prisma/client": "^4.3.1",
-    "@remix-run/node": "^1.6.8",
-    "@remix-run/react": "^1.6.8",
-    "@remix-run/serve": "^1.6.8",
-    "@xstate/react": "^3.0.1",
+    "@prisma/client": "^5.5.2",
+    "@remix-run/css-bundle": "^2.2.0",
+    "@remix-run/node": "^2.2.0",
+    "@remix-run/react": "^2.2.0",
+    "@remix-run/serve": "^2.2.0",
+    "@xstate/react": "^3.2.2",
     "classnames": "^2.3.2",
+    "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-movable": "^3.0.4",
-    "xstate": "^4.33.6"
+    "xstate": "^4.38.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/preset-env": "^7.19.0",
-    "@babel/preset-typescript": "^7.18.6",
-    "@remix-run/dev": "^1.6.8",
-    "@remix-run/eslint-config": "^1.6.8",
-    "@types/jest": "^29.0.0",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "babel-jest": "^29.0.2",
-    "eslint": "^8.20.0",
-    "jest": "^29.0.2",
-    "npm-run-all": "^4.1.5",
-    "prisma": "^4.3.1",
-    "tailwindcss": "^3.1.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "@remix-run/dev": "^2.2.0",
+    "@remix-run/eslint-config": "^2.2.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.38.0",
+    "prisma": "^5.5.2",
+    "tailwindcss": "^3.3.5",
+    "tsx": "^4.1.1",
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.6"
   },
   "engines": {
-    "node": "18"
+    "node": ">=18.0.0"
   }
 }
