--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
     "@xstate/react": "^3.2.2",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-movable": "^3.0.4",
+    "remix-auth": "^3.6.0",
+    "remix-auth-form": "^1.4.0",
     "xstate": "^4.38.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.2.0",
     "@remix-run/eslint-config": "^2.2.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.38.0",
