--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
     "@xstate/react": "^3.2.2",
+    "accept-language-parser": "^1.5.0",
     "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
     "isbot": "^3.6.8",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.2.0",
     "@remix-run/eslint-config": "^2.2.0",
+    "@types/accept-language-parser": "^1.5.6",
     "@types/bcrypt": "^5.0.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
